improve CurrencyController